[gd_scene load_steps=2 format=3 uid="uid://cdpt4hl1lpgsl"]

[ext_resource type="Script" uid="uid://b7c3076px78w7" path="res://addons/animplayer-redirector/tree_editor.gd" id="1_rpnu5"]

[node name="Window" type="Window"]
title = "Redirect Animation Node(s)"
initial_position = 4
size = Vector2i(800, 600)
exclusive = true
popup_window = true
script = ExtResource("1_rpnu5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Tree" type="Tree" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 5
column_titles_visible = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Accept" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Accept"

[node name="Cancel" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="item_edited" from="VBoxContainer/Tree" to="." method="_on_tree_item_edited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Accept" to="." method="_on_accept_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
